2001-09-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (CFSTR_* ): Add new defines.
	Thanks to: "Ron" <ron@debian.org> . 
	Unicode them.

Thu Aug 30 09:35:51 2001  Christopher Faylor <cgf@cygnus.com>

	* include/winsock2.h: Remove "extra token" after #endif.

2001-08-31  Earnie Boyd  <earnie@SF.Net>

	* config.guess: Remove the \r from the end of line.
	* config.sub: Ditto.

2001-08-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h: Allow anonymous struct in [U]LARGE_INTEGER
	if __cplusplus as well as if _ANONYMOUS_STRUCT.

2001-08-29  Earnie Boyd  <earnie@SF.Net>

	* config.guess: Add the MSYS system.
	* config.sub: Ditto.
	* include/winsock.h: Add the __INSIDE_MSYS__ protections.
	* incldue/winsock2.h: Ditto.

2001-08-29  Eric Kohl  <ekohl@users.sourceforge.net>

	* include/winnt.h: Allow anonymous (Xxx.LowPart) or
	non-anonymous (Xxx.u.LowPart) access to HighPart and
	LowPart of a LARGE_INTEGER or ULARGE_INTEGER.

2001-08-24  TAMURA Kent  <tkent@users.sourceforge.net>

	* include/wingdi.h (HANGUL_CHARSET): Add define.

2001-08-21  Earnie Boyd  <earnie@SF.Net>

	* include/setupapi.h: Formatting.

2001-08-21  Earnie Boyd  <earnie@SF.Net>

	* include/shlobj.h: Remove \r from the line endings.

2001-08-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/setupapi.h : New file.
	* lib/setupapi.def:New file.
	* lib/test.c: Include setupapi.h.

2001-08-21  Danny Smith  <dannysmith@users.sourceforge.net>
	* include/winioctl.h (_DISK_PERFORMANCE): Correct typo.

2001-08-21  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/richedit.h (ENLINK): Add structure definition.
	(EM_AUTOURLDETECT, EN_LINK, ENM_LINK): Add defines.

2001-08-21  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (CMIC_*): Remove duplicate defines.
	(CMDSTR_*): Remove duplicates; UNICODE string constants.
	(GCS_*): Make UNICODE.
	(CSIDL_*): Add more defines.
	* include/winioctl.h (_MEDIA_TYPE): Add pointer typedef.